# vector-ai-agents-lab

./: .gitignore  README.md  pyproject.toml
src/advanced/orion_ai_coding_agent/: main.py  requirements.txt  run.sh
src/advanced/orion_ai_coding_agent/src/agents/: github_integration_agent.py
src/beginner/: conflict_detector.py  pdf_summarizer.py  web_scraper.py
src/beginner/pdf_summarizer/: crewai_summarize.py  summarize.py
src/beginner/website_scraper/: crewai_scrape.py
