[project]
name = "vector-ai-agents-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black>=25.9.0",
    "crewai==0.148.0",
    "crewai_tools==0.17.0",
    "exa-py>=1.16.1",
    "fastapi>=0.119.0",
    "isort>=6.0.1",
    "ruff>=0.13.2",
    "yfinance>=0.2.66",
]
